Implement API for modifying problem tags.
