# BitWaves.WebAPI/docs/swagger/bitwaves-v1.yaml
@@ -581,6 +581,35 @@ paths:
           description: 用户没有足够的权限访问题目
         404:
           description: 未能找到指定的题目
+  /problems/{problemId}/tags:
+    put:
+      summary: 修改题目标签
+      description: 修改题目标签
+      tags:
+        - problems
+      parameters:
+        - in: header
+          name: Authorization
+          type: string
+          required: true
+          description: 用户身份标识，格式为 `Jwt <jwt>`。注意 `Jwt` 与 `<jwt>` 之间的空格
+        - in: body
+          name: data
+          required: true
+          schema:
+            $ref: '#/definitions/PutProblemTagsModel'
+      responses:
+        200:
+          description: 操作成功完成
+        400:
+          description: 请求中包含无效的标签名称
+        403:
+          description: 用户没有相应的权限
+        404:
+          description: 无法找到要求的题目
+        422:
+          description: 一个或多个要添加的标签无法在题目标签数据字典中被找到
+
 
   /problems/tags:
     get:
@@ -1266,17 +1295,8 @@ definitions:
         example: "notes"
       difficulty:
         type: integer
-        description: 题目的难度系数，有效范围为 [0, 100]。若不需要修改，请不要提供此字段
+        description: 题目的难度系数。若不需要修改，请不要提供此字段
         example: 80
-      tags:
-        type: array
-        items:
-          type: string
-        description: 题目的标签。若不需要修改，请不要提供此字段
-        example:
-          - 字符串
-          - 模拟
-          - 数据结构
       timeLimit:
         type: integer
         minimum: 500
@@ -1304,6 +1324,24 @@ definitions:
         description: 当评测模式为 Standard 模式时，该成员指出传递给内建答案检查器的参数。可能的值包括：`FloatingPointAware` 以及 `IgnoreCase`
         example:
           - FloatingPointAware
+
+  PutProblemTagsModel:
+    type: object
+    properties:
+      tagsToAdd:
+        type: array
+        items:
+          type: string
+          minLength: 1
+          maxLength: 32
+        description: 要添加的标签名称
+      tagsToRemove:
+        type: array
+        items:
+          type: string
+          minLength: 1
+          maxLength: 32
+        description: 要删除的标签名称
 
   ProblemListItem:
     type: object
